--- a/src/content/Content.css
+++ b/src/content/Content.css
@@ -242,7 +242,7 @@
     justify-content: space-around;
     align-items: center;
     height: 100vh;
-    background-color: var(--bg-color);
+    background-color: #f4e8dd;
 }
 
 .video-wrapper h2 {
